--- a/app/src/main/res/layout/activity_nick.xml
+++ b/app/src/main/res/layout/activity_nick.xml
@@ -58,6 +58,20 @@
         </LinearLayout>
 
     </LinearLayout>
+    <Button
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/btn_share"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/red"
+        android:fontFamily="sans-serif-medium"
+        android:onClick="switchShare"
+        android:text="Share"
+        android:textAllCaps="false"
+        android:textSize="15sp"
+        android:layout_marginBottom="40dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
